corrected the z-index problem

--- a/app/styles/landing.css
+++ b/app/styles/landing.css
@@ -3,27 +3,24 @@
  }
 
 .sign-up {
+    position: relative;
     background-color: rgba(58,23,63,0.5);
     margin-left:10%;
-    z-index:2;
-}
-
-#myForm {
-    z-index:12;
+    z-index:5;
 }
 
 .sign-up form {
     margin-top:3%;
+    z-index:6;
 }
  
  .hero-content {
-     position: relative;
+     /*position: relative;*/
      min-height: 600px;
      background-image: url(../assets/images/bloc_jams_bg.jpg);
      background-repeat: no-repeat;
      background-position: center center;
      background-size: cover;
-     z-index:-2;
  }
  
  .hero-content .hero-title {
@@ -39,7 +36,7 @@
     text-transform: uppercase;
     letter-spacing: 0.5rem;
     text-shadow: 1px 1px 0px rgb(58,23,63);
-     z-index:-2;
+     z-index:0;
  }
  
  .selling-points {
